--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gulp-minify-css": "^0.3.7",
     "gulp-connect": "^2.0.6",
     "gulp-rename": "^1.2.0",
-    "gulp-clean": "^0.3.1"
+    "gulp-clean": "^0.3.1",
+    "gulp-load-plugins": "^0.9.0"
   }
 }
