--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
   "devDependencies": {
     "gulp": "^3.8.6",
-    "gulp-jade": "^0.6.1",
-    "gulp-sass": "^0.7.2",
-    "gulp-uglify": "^0.3.1",
-    "gulp-concat": "^2.3.3",
+    "gulp-bower": "0.0.10",
     "gulp-changed": "^0.4.0",
-    "gulp-imagemin": "^0.6.1",
-    "run-sequence": "^0.3.6",
-    "gulp-minify-css": "^0.3.7",
-    "gulp-connect": "^2.0.6",
-    "gulp-rename": "^1.2.0",
     "gulp-clean": "^0.3.1",
+    "gulp-concat": "^2.3.3",
+    "gulp-connect": "^2.0.6",
+    "gulp-imagemin": "^0.6.1",
+    "gulp-jade": "^0.6.1",
     "gulp-load-plugins": "^0.9.0",
-    "gulp-bower": "0.0.10"
+    "gulp-minify-css": "^0.3.7",
+    "gulp-rename": "^1.2.0",
+    "gulp-sass": "^2.3.1",
+    "gulp-uglify": "^0.3.1",
+    "run-sequence": "^0.3.6"
   }
 }
