--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
   "devDependencies": {
     "gulp": "^3.8.6",
-    "gulp-bower": "0.0.10",
-    "gulp-changed": "^0.4.0",
+    "gulp-bower": "0.0.13",
+    "gulp-changed": "^1.3.2",
     "gulp-clean": "^0.3.1",
+    "gulp-clean-css": "^2.0.3",
     "gulp-concat": "^2.3.3",
-    "gulp-connect": "^2.0.6",
-    "gulp-imagemin": "^0.6.1",
-    "gulp-jade": "^0.6.1",
-    "gulp-load-plugins": "^0.9.0",
-    "gulp-minify-css": "^0.3.7",
+    "gulp-connect": "^5.0.0",
+    "gulp-imagemin": "^3.1.1",
+    "gulp-load-plugins": "^1.4.0",
+    "gulp-pug": "^3.2.0",
     "gulp-rename": "^1.2.0",
-    "gulp-sass": "^2.3.1",
-    "gulp-uglify": "^0.3.1",
-    "run-sequence": "^0.3.6"
+    "gulp-sass": "^3.0.0",
+    "gulp-uglify": "^2.0.0",
+    "run-sequence": "^1.2.2"
   }
 }
